--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
 	"name": "angular-storage-emitter-demo",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"authors": [
 		"FloGou <florent.gouget@gmail.com>"
 	],
+    "main": ["storage-emitter.min.js"],
 	"description": "Demo",
 	"keywords": [
 	],
