fix name in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-	"name": "angular-storage-emitter-demo",
+	"name": "angular-storage-emitter",
 	"version": "0.0.1",
 	"authors": [
 		"FloGou <florent.gouget@gmail.com>"
